--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "author": "Daniel Brooke Peig",
   "license": "MIT",
+  "publishConfig": { "registry": "https://npm.pkg.github.com/" },
   "dependencies": {
     "johnny-five": "^1.3.1",
     "mock-require": "^3.0.3",
