--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "johnny-five-android-termux",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Johnny-Five TCP client for Android devices running Termux.",
   "main": "index.js",
   "scripts": {
@@ -9,9 +9,10 @@
   "author": "Daniel Brooke Peig",
   "license": "MIT",
   "dependencies": {
-    "johnny-five": "^1.3.1",
+    "firmata": "^2.2.0",
+    "johnny-five": "^2.0.0",
     "mock-require": "^3.0.3",
     "net": "^1.0.2",
-    "serialport": "^8.0.6"
+    "serialport": "^9.0.1"
   }
 }
